tests/negative-fixtures/banned_env_var/src/lib.rs
pub fn ambient_environment() -> Option<String> {
    std::env::var("TRACEWAKE_FIXTURE").ok()
}
